fix time_func.Scan()