@@ -6,7 +6,7 @@ import (
 )
 
 func (f *Excel[T]) ValidTitle(dst *Excel[T]) (e *Excel[T], err error) {
-	if len(dst.rows[0]) != len(f.rows[0]) || !util.Equal(dst.rows[0], f.rows[0]) {
+	if len(f.Titles) != len(f.Titles) || !util.Equal(dst.Titles, f.Titles) {
 		return f, errors.New("the title is different")
 	}
 	return
